--- a/project/public/styles/calendar.css
+++ b/project/public/styles/calendar.css
@@ -522,6 +522,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: end;
     padding: 3px 8px;
 }
 
@@ -597,4 +598,126 @@ body {
 .routine .edit-routine {
     font-size: 12px;
     cursor: pointer;
+}
+
+/* POP-UP */
+
+.popup {
+    display: none; /* esconde inicialmente */
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5); /* fundo escuro semi-transparente */
+    }
+
+.popup-conteudo {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    position: relative;
+}
+
+.fechar {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.input-cont {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-cont input, .input-cont textarea {
+    border: 1px solid var(--color-items-primary);
+    border-radius: 8px;
+    height: 2rem;
+    padding: 1rem;
+
+    color: var(--color-items-second);
+    font-family: "Nunito", sans-serif;
+}
+
+.input-cont input:focus, .input-cont textarea:focus {
+    border: 2px solid var(--color-items-second);
+    outline: none;
+}
+
+.input-cont textarea {
+    resize: none;
+    height: 6rem;
+}
+
+.semanas-button {
+    display: flex;
+}
+
+.semanas-button button {
+    cursor: pointer;
+    border: transparent;
+    box-shadow: transparent;
+    font-weight: 700;
+    background: #ff8997;
+    font-family: "Nunito", sans-serif;
+    color: var(--color-items-primary);
+    padding: .25rem 1.3rem;
+    font-size: 15px;
+    border-style: solid;
+    border-color: var(--color-items-primary);
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-right-width: 0px;
+    border-left-width: 0px;
+
+    transition: background .3s ease;
+}
+
+.semanas-button button:first-child {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+
+    border-right-width: 0px;
+    border-left-width: 2px;
+    
+}
+
+.semanas-button button:last-child {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+
+    border-right-width: 2px;
+    border-left-width: 0px;
+}
+
+.semanas-button .escolhido {
+    background: var(--color-items-primary);
+    color: var(--text-light);
+}
+
+.time-inputs {
+    display: flex;
+    justify-content: space-between;
+}
+
+.time-inputs .input-cont {
+    min-width: 150px;
+    max-width: 268px;
+}
+
+.cta-button.btn-popup {
+    margin: auto;
+    &:before {
+        content: "EDITAR ROTINA";
+    }
 }
