--- a/project/public/styles/cores.css
+++ b/project/public/styles/cores.css
@@ -6,6 +6,7 @@
     --bg-third:#f5f3f0;
     --bg-cont: #17001d;
     --color-items-primary: #ff0546;
+    --color-items-primary50: #ff05487c;
     --color-items-second: #9c173b;
     --color-dark: #450327;
     --accent: #0098db;
