--- a/project/public/views/routine.html
+++ b/project/public/views/routine.html
@@ -9,30 +9,35 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&" />
   </head>
   <body>
-    <div class="sidebar-container">
+    <aside class="sidebar-container">
       <div class="sidebar">
         <div class="logo-container">
-          <img src="../imgs/foca_texto_branco.png" alt="logo-foca">
+            <img src="/imgs/foca_texto.svg" alt="Logo foca">
         </div>
         <nav class="navbar">
-          <ul class="navbar-links">
-            <li><i class="fa-solid fa-chart-line"></i>Overview</li>
-            <li><i class="fa-solid fa-calendar"></i>Rotina</li>
-            <li><i class="fa-solid fa-list-check"></i>Tarefas</li>
-            <li><i class="fa-solid fa-hourglass-half"></i>Podomoro</li>
-            <li><i class="fa-solid fa-brain"></i>Focão AI</li>
-          </ul>
+            <ul class="navbar-links">
+                <li><i class="fa-solid fa-chart-line"></i><span>Overview</span></li>
+                <li><i class="fa-solid fa-calendar"></i><span>Rotina</span></li>
+                <li><i class="fa-solid fa-list-check"></i><span>Tarefas</span></li>
+                <li><i class="fa-solid fa-hourglass-half"></i><span>Pomodoro</span></li>
+                <li><i class="fa-solid fa-brain"></i><span>Focão AI</span></li>
+            </ul>
         </nav>
         <div class="divider"></div>
         <nav class="navbar-insights">
-          <ul class="navbar-links">
-            <li><i class="fa-solid fa-gear"></i>Configurações</li>
-            <li><i class="fa-solid fa-right-from-bracket"></i>Sair</li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-    <div class="site-container">
+            <ul class="navbar-links">
+                <li><i class="fa-solid fa-gear"></i><span>Configurações</span></li>
+                <li><i class="fa-solid fa-right-from-bracket"></i><span>Sair</span></li>
+             </ul>
+            </nav>
+        </div>
+        <div class="sidebar-slide" onclick="toggleSizeSidebar()">
+            <span class="material-symbols-rounded">
+                chevron_right
+            </span>
+        </div>
+    </aside>
+    <main class="site-container">
       <header class="header">
         <div class="first-header">
             <div class="section-info">
@@ -40,7 +45,7 @@
                 <h1>Rotina</h1>
             </div>
             <div class="profile-container">
-                <span onclick="mudarTema()" class="profile-container material-symbols-rounded">
+                <span onclick="mudarTema()" class="theme-button material-symbols-rounded">
                     brightness_medium
                 </span>
                 <div class="stats">
@@ -72,34 +77,17 @@
             </div>
         </div>
       </header>
-      <div class="container-calendar">
+      <!-- <div class="container-calendar">
         <div id='calendar'></div>
         <div class="sidebar-calendar">
             <div class="header-calendar">
                 <h1>Rotinas</h1>
             </div>
           <div class="routines-container">
-                <!-- <div class="routine">
-                    <b>Titulo da Rotina</b>
-                    <em>Aqui vai a descrição da rotina</em>
-                    <div class="semanas">
-                        <span>D</span>
-                        <span>S</span>
-                        <span>T</span>
-                        <span>Q</span>
-                        <span>Q</span>
-                        <span>S</span>
-                        <span>S</span>
-                    </div>
-                    <div class="bottom">
-                        <small>07:00</small>
-                        <i onclick="editRoutine()" class="edit-routine fa-solid fa-pen"></i>
-                    </div>
-                </div> -->
           </div>
         </div>
-      </div>
-    </div>
+      </div> -->
+    </main>
     <div style="display: none;" id="popup" class="popup">
         <div class="popup-conteudo">
             <span class="fechar" onclick="fecharRotina()"><i class="fa-solid fa-xmark"></i></span>
