fazendo responsividade rotina

--- a/project/public/views/routine.html
+++ b/project/public/views/routine.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang='pt-BR'>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta charset='utf-8' />
     <title>Rotina - Foca</title>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
@@ -76,17 +78,22 @@
                 <img src="../imgs/dashboard/SPORTRECIFE.gif" alt="" class="art">
             </div>
         </div>
-      </header>
-      <!-- <div class="container-calendar">
-        <div id='calendar'></div>
-        <div class="sidebar-calendar">
-            <div class="header-calendar">
-                <h1>Rotinas</h1>
+        </header>
+        <div class="grid">
+            <div class="container-calendar">
+                <div id='calendar'></div>
             </div>
-          <div class="routines-container">
-          </div>
+            <div class="container-rotinas">
+                <div class="sidebar-calendar">
+                <div class="header-calendar">
+                    <h1>Rotinas</h1>
+                </div>
+                <div class="routines-container">
+                </div>
+                </div>
+            </div>
         </div>
-      </div> -->
+        
     </main>
     <div style="display: none;" id="popup" class="popup">
         <div class="popup-conteudo">
