--- a/project/public/views/dashboard.html
+++ b/project/public/views/dashboard.html
@@ -71,7 +71,7 @@
                 <i class="fas fa-chart-line text-base"></i>
                 Overview
             </a>
-            <a href="#" class="flex items-center gap-3 hover:opacity-90">
+            <a href="/user/rotina" class="flex items-center gap-3 hover:opacity-90">
                 <i class="fas fa-calendar-alt text-base"></i>
                 Rotina
             </a>
