--- a/project/public/styles/calendar.css
+++ b/project/public/styles/calendar.css
@@ -1,5 +1,7 @@
 @import url(cores.css);
 
+@import url(user-styles.css);
+
 :root {
     --fc-small-font-size: .85em;
     --fc-page-bg-color: var(--bg-second);
@@ -33,140 +35,6 @@
     --fc-highlight-color: rgba(188, 232, 241, 0.3);
     --fc-today-bg-color: rgba(255, 40, 87, 0.15);
     --fc-now-indicator-color: red;
-}
-
-.dark-mode {
-    --bg-primary: #1D1D1D;
-    --bg-second: #121212;
-    --bg-third: #121212;
-    --bg-cont: #fdfdfd;
-    --color-items-primary: #ff0546;
-    --color-items-primary50: #ff05487c;
-    --color-items-second: #9c173b;
-    --color-dark: #450327;
-    --accent: #0098db;
-    --accent-gradient: #1e579c;
-    --text-light: #fdfdfd;
-    --text-dark: #17001d;
-    --text-theme: #fdfdfd;
-}
-
-body {
-    display: grid;
-    grid-template-rows: 100vh;
-    grid-template-areas: 
-        "sidebar site";
-    transition: .35s ease-in-out;
-}
-
-body.big-sidebar {
-    grid-template-columns: 270px 1fr;
-}
-
-.sidebar-container {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* height: 100vh; */
-    display: inline-block;
-    background: var(--bg-primary);
-    border-right: 5px groove var(--color-items-primary) ;
-    z-index: 1000;
-    grid-area: sidebar;
-}
-
-body.small-sidebar {
-    grid-template-columns: 80px 1fr;
-}
-
-body.small-sidebar .navbar-links li span, body.small-sidebar .navbar-insights li span {
-    display: none;
-}
-
-body.small-sidebar .sidebar {
-    margin: 2rem 0 2rem .78rem;
-}
-
-body.small-sidebar .logo-container img{
-    padding-left: 7px;
-}
-
-.sidebar {
-    margin: 2rem 0 2rem 1.2rem;
-    transition: .35s ease-in-out;
-}
-
-.logo-container img{
-    padding-left: 7px;
-    max-height: 40px;
-    height: 100%;
-}
-
-.navbar-links {
-    cursor: pointer;
-    margin: 3rem 0;
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    list-style: none;
-}
-.divider {
-    border-bottom: unset;
-}
-
-.navbar-links a{
-    text-decoration: none;;
-}
-
-.navbar-links li{
-    width: 250px;
-    padding: 15px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    
-    font-size: 1.2rem;
-    color: var(--text-theme);
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    transition: box-shadow .35s ease;
-    & > i {
-        width: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-.navbar-links a li:hover {
-    box-shadow: inset 250px 0px 0px var(--color-items-primary50);
-    color: var(--text-light);
-}
-
-.navbar .navbar-links a:nth-child(2) li{
-    box-shadow: inset 250px 0px 0px var(--color-items-primary50);
-    color: var(--text-light);
-}
-
-
-.material-symbols-rounded {
-    font-variation-settings:
-    'FILL' 1,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
-}
-
-.site-container {
-    width: 100%;
-    height: auto;
-    background: var(--bg-third);
-    padding: 3rem;
-    /* height: 100vh; */
-    overflow: hidden auto;
-    grid-area: site;
 }
 
 
@@ -853,19 +721,9 @@ body.small-sidebar .logo-container img{
     margin: auto;
 }
 
-.sidebar-slide i {
-    position: absolute;
-    right: 50%;
-    bottom: 2rem;
-    padding: .35rem;
-    border-radius: 50%;
-    font-size: 1.5rem;
-
-    color: var(--color-items-primary);
-    cursor: pointer;
-
-    translate: 50% 0;
-    z-index: 1000;
+.navbar .navbar-links a:nth-child(2) li{
+    box-shadow: inset 250px 0px 0px var(--color-items-primary50);
+    color: var(--text-light);
 }
 
 /* Responsive adjustments */
